--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -2,9 +2,11 @@
 @lightblue: #F7F8Fb;
 @black: #444;
 @grey: #aaa;
-@width: 940px;
-@font: 'Actor',tahoma,verdana,sans-serif;
-@form-part-padding-h:24px;
+@font: 100% tahoma,verdana,sans-serif;
+@topbg: #4B8FCF;
+@sidewidth: 30%;
+@mainwidth: 100% - @sidewidth;
+@topheight: 66px;
 
 html,body {
   width: 100%;
@@ -23,6 +25,13 @@ label, legend {
 .left {float: left}
 .right {float:right}
 
+.content {
+  height: 100%;
+  form {
+    height: 100%;
+  }
+}
+
 .button, input[type="submit"],
   input[type="reset"],
   input[type="button"] {
@@ -36,7 +45,6 @@ label, legend {
     font-weight: bold;
     text-decoration: none;
     cursor: pointer;
-    margin-bottom: 20px;
     line-height: normal;
     &.black {
       color: #fff;
@@ -69,69 +77,48 @@ input[type="text"],
   font: @font;
 }
 
-input.big {
-  width: @width - 120px;
-}
-
-.container {
-  width: @width;
-  margin: 0 auto;
+section.left-wrap {
+  float: left;
+  width: @sidewidth;
+  background: #f76922;
   position: relative;
+  height: 100%;
+  .logo-wrap {
+    height: @topheight;
+  }
+  .left-form {
+    background: pink;
+    position: absolute;
+    top: @topheight;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 }
 
-header {
-  @background: #F5F5F5;
-  background: @background;
-  border-bottom: 2px solid darken(@background, 15%);
-  @height: 36px;
-  nav {
-    a {
-      display: inline-block;
-      line-height: @height;
-      text-decoration: none;
-      padding: 2px 16px 0;
-      &.active {
-        background: @darkblue;
-        color: #fff;
-        margin-bottom: -2px;
-        border-bottom:2px solid darken(@darkblue, 10%);
-      }
-      &:hover {
-        color: darken(@darkblue, 15%);
-        &.active {
-          color: #fff;
-        }
+section.top-wrap {
+  overflow: hidden;
+  //box-shadow: 0 0 5px #999;
+  .inner {
+    padding: 12px 16px 0;
+    height: @topheight - 12px;
+    background: @topbg;
+    .url-input-wrap {
+      margin-right: 84px;
+      overflow: hidden;
+      input.big {
+        width: 100%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        border: 1px solid darken(@topbg, 15%);
       }
     }
-  }
-  #nko-button {
-    position: absolute;
-    right: 0;
-    top: @height / 2 - 25/2 + 1px;
-  }
-}
-
-section.content {
-  padding: 20px;
-}
-
-.home {
-  text-align: center;
-}
-
-section.form-part {
-  background: @lightblue;
-  border: 2px solid darken(@lightblue, 3%);
-  -moz-border-radius: 12px;
-  -webkit-border-radius: 12px;
-  border-radius: 12px;
-  padding: 20px @form-part-padding-h;
-  margin-bottom: 20px;
-}
-
-.url-example {
-  input {
-    margin-bottom: 8px;
+    input[type='submit'] {
+      position: absolute;
+      top: 14px;
+      right: 20px;
+    }
   }
 }
 
@@ -163,7 +150,7 @@ div.tagsinput span.tag {
 
 .selectors-wrap {
   float: left;
-  width: @width / 2 - @form-part-padding-h/2;
+  width: 50%;
   .selector {
     border-bottom: 2px solid darken(@lightblue, 8%);
     padding-bottom: 20px;
@@ -219,7 +206,7 @@ div.tagsinput span.tag {
 
 .preview-wrap {
   float: right;
-  width: @width / 2 - @form-part-padding-h/2;
+  width: 50%;
   h3 {
     .preview-wrap-text {
       position: absolute;
@@ -265,45 +252,9 @@ ol.scrapers {
   }
 }
 
-nav.browse-nav {
-  color: @grey;
-  padding: 12px 16px;
-  .page-count {
-    padding: 0 16px;
-    color: #000;
-  }
-}
-
-.video {
-  padding: 0 0 8px;
-}
-
-.homebox {
-  width: 368px;
-  margin: 10px;
-  outline: 1px solid lighten(@grey, 20%);
-  display:inline-block;
-  padding: 20px;
-  vertical-align:top;
-  text-align:left;
-  -webkit-box-shadow: 1px 1px 3px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    1px 1px 3px rgba(50, 50, 50, 0.75);
-box-shadow:         1px 1px 3px rgba(50, 50, 50, 0.75);
-  color: #444;
-  h2 {
-    font-size: 20px;
-    color: #000;
-    padding-bottom: 8px;
-  }
-}
-
-.call-to-action {
-font-size: 24px;
-color:#444;
-  padding: 20px 0;
-  a {
-    text-decoration: none;
-  }
-}
-
 .clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}
+.clearfix:after { content: "\00A0"; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
+.clearfix{ display: inline-block;}
+html[xmlns] .clearfix { display: block;}
+* html .clearfix{ height: 1%;}
+.clearfix {display: block}
