--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -3,10 +3,25 @@
 @black: #444;
 @grey: #aaa;
 @font: 100% tahoma,verdana,sans-serif;
-@topbg: #4B8FCF;
+@topbg: #F1F2DF;
+@pink: #FF929C;
 @sidewidth: 30%;
 @mainwidth: 100% - @sidewidth;
 @topheight: 66px;
+
+.quick-gradient (@origin: top, @alpha: 0.1) {
+    background-image: -webkit-linear-gradient(@origin, rgba(0,0,0,0.0), rgba(0,0,0,@alpha));
+    background-image: -moz-linear-gradient(@origin, rgba(0,0,0,0.0), rgba(0,0,0,@alpha));
+    background-image: -o-linear-gradient(@origin, rgba(0,0,0,0.0), rgba(0,0,0,@alpha));
+    background-image: -ms-linear-gradient(@origin, rgba(0,0,0,0.0), rgba(0,0,0,@alpha));
+    background-image: linear-gradient(@origin, rgba(0,0,0,0.0), rgba(0,0,0,@alpha));
+}
+
+.box-shadow (@x: 0px, @y: 1px, @blur: 3px, @alpha: 0.2) {
+    -webkit-box-shadow: @x @y @blur rgba(0, 0, 0, @alpha);
+    -moz-box-shadow: @x @y @blur rgba(0, 0, 0, @alpha);
+    box-shadow: @x @y @blur rgba(0, 0, 0, @alpha);
+}
 
 html,body {
   width: 100%;
@@ -65,6 +80,16 @@ label, legend {
         background: darken(@lightblue, 28%);
       }
     }
+    &.pink {
+      color: #fff;
+      text-shadow: 0 1px 2px desaturate(darken(@pink, 25%), 15%);
+      background: @pink;
+      font-weight: 400;
+      border-top: 1px solid lighten(@pink, 15%);
+      border-bottom: 2px solid desaturate(darken(@pink, 15%), 40%);
+      .quick-gradient();
+      .box-shadow();
+    }
   }
 
 input[type="text"],
@@ -80,14 +105,14 @@ input[type="text"],
 section.left-wrap {
   float: left;
   width: @sidewidth;
-  background: #f76922;
   position: relative;
   height: 100%;
   .logo-wrap {
+    background: #4B5B6E;
     height: @topheight;
   }
   .left-form {
-    background: pink;
+    background: #F0F0f0;
     position: absolute;
     top: @topheight;
     left: 0;
@@ -104,7 +129,7 @@ section.top-wrap {
     height: @topheight - 12px;
     background: @topbg;
     .url-input-wrap {
-      margin-right: 84px;
+      margin-right: 92px;
       overflow: hidden;
       input.big {
         width: 100%;
@@ -116,7 +141,7 @@ section.top-wrap {
     }
     input[type='submit'] {
       position: absolute;
-      top: 14px;
+      top: 11px;
       right: 20px;
     }
   }
@@ -217,8 +242,7 @@ div.tagsinput span.tag {
 }
 
 .preview {
-  font-family: monospace;
-  font-size: 12px;
+  font: 13px/18px monospace;
   overflow:scroll;
   word-wrap:  break-word;
   pre {
