Generate API endpoint button

--- a/src/views/edit.jade
+++ b/src/views/edit.jade
@@ -1,7 +1,9 @@
 extends layout
 block content
   section.left-wrap
-    .logo-wrap Dex
+    .logo-wrap
+      h1 Dex
+      .api-permalink.button.pink Generate API Endpoint
     .left-form what
 
   section.top-wrap.clearfix
