--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -26,7 +26,7 @@
 html,body {
   width: 100%;
   height: 100%;
-  font: 16px @font;
+  font: @font;
 }
 
 a {
@@ -85,7 +85,7 @@ label, legend {
       text-shadow: 0 1px 2px desaturate(darken(@pink, 25%), 15%);
       background: @pink;
       font-weight: 400;
-      border-top: 1px solid lighten(@pink, 15%);
+      border-top: 1px solid lighten(@pink, 5%);
       border-bottom: 2px solid desaturate(darken(@pink, 15%), 40%);
       .quick-gradient();
       .box-shadow();
