--- a/src/views/edit.jade
+++ b/src/views/edit.jade
@@ -13,6 +13,9 @@ block content
       input.pink.right.lightblue(type="submit", value="Run &raquo;")
 
   .preview
+    .preview-wrap-text
+      input(type="checkbox", checked="checked")
+      = "Wrap text?"
     pre= JSON.stringify(json, null, '  ')
 
 
