Install jquery.nestable

--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -4,11 +4,13 @@ html
     meta(charset='utf-8')
     title= title
     link(rel='stylesheet', href='/vendor/reset.css')
+    link(rel='stylesheet', href='/vendor/jquery.nestable.css')
     link(rel='stylesheet', href='/vendor/jquery.tagsinput.css')
     link(rel='stylesheet', href='/vendor/highlight.css')
     link(rel='stylesheet', href='/main.css')
     script(src='/vendor/jquery.js')
     script(src='/vendor/underscore.js')
+    script(src='/vendor/jquery.nestable.js')
     script(src='/vendor/jquery.tagsinput.js')
     script(src='/vendor/highlight.json.js')
     script(src='/main.js')
