--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -39,6 +39,7 @@ label, legend {
 
 .left {float: left}
 .right {float:right}
+.hide { display:none;}
 
 .content {
   height: 100%;
@@ -111,7 +112,7 @@ section.left-wrap {
     background: #4B5B6E;
     height: @topheight;
   }
-  .left-form {
+  .dd {
     background: #F0F0f0;
     position: absolute;
     top: @topheight;
